Correzione titoli paragrafi finale

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="icona">&hearts;</span>
                 <span class="sconto">-30%</span>
             <div class="testo">
-                <span class="marca">Levi's<span>
+                <span class="marca">Guess<span>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <p class="red">20,99 € <span class="sbarrato">29,99 €</span></p>
             </div>
@@ -43,7 +43,7 @@
 
                 <span class="icona">&hearts;</span>
             <div class="testo">
-                <span class="marca">Levi's<span>
+                <span class="marca">Come Zucchero Filato<span>
                 <h3>RELAXED FIT TEE UNISEX</h3>
                 <p class="red">129,99 €</p>
             </div>
@@ -87,10 +87,12 @@
                <img class="foto2" src="img/6b.webp" alt="modella">
 
                <span class="icona">&hearts;</span>
+               <span class="slogan1">Sostenibilità</span>
            <div class="testo">
                <span class="marca">Espirit<span>
                <h3>Maglione - Black</h3>
                <p class="red">29,99 €</p>
+               
            </div>
        </div>
      </div>
