--- a/bonus.html
+++ b/bonus.html
@@ -3,7 +3,7 @@
 
 <head>
    <meta charset="UTF-8">
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/bonus.css">
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;900&display=swap" rel="stylesheet">
    <title>Titolo Documento</title>
